# typing-analysis

./: .gitignore  CLAUDE.md  README.md  analyze.py  devenv.nix  flake.nix  logger.py  module.nix  package.nix  pyproject.toml  report.py  test_analyze.py  test_report.py  typing-logger.service
.beads/: issues.jsonl  last-touched
